[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/alien_boss.gd" type="Script" id=1]
[ext_resource path="res://Art/alien_boss.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemy_state_machine.gd" type="Script" id=3]
[ext_resource path="res://Audio/SFX/hurt.wav" type="Sample" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 45 )

[sub_resource type="Animation" id=2]

resource/name = "attack"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]

resource/name = "spell"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=6]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11 ]
}

[sub_resource type="SampleLibrary" id=7]

samples/hurt = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 10.0

[node name="AlienBoss" type="KinematicBody2D" groups=[
"enemy",
]]

transform/pos = Vector2( -64, 12 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
hp = 30
damage = 1
speed = 2
overrun = false

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="EnemyStateMachine" type="Node" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyStateMachine"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/attack = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/spell = SubResource( 5 )
anims/walk = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 7 )
config/pitch_random = 0.0

[node name="LeftCast" type="RayCast2D" parent="."]

transform/pos = Vector2( -10, 38 )
enabled = true
cast_to = Vector2( -200, 0 )
layer_mask = 1
type_mask = 15

[node name="LeftCast1" type="RayCast2D" parent="."]

transform/pos = Vector2( -10, -15 )
enabled = true
cast_to = Vector2( -200, 0 )
layer_mask = 1
type_mask = 15

[node name="LeftFootCast" type="RayCast2D" parent="."]

transform/pos = Vector2( -10, 46 )
enabled = true
cast_to = Vector2( -1, 1 )
layer_mask = 1
type_mask = 15

[node name="RightFootCast" type="RayCast2D" parent="."]

transform/pos = Vector2( 10, 46 )
enabled = true
cast_to = Vector2( 1, 1 )
layer_mask = 1
type_mask = 15

[node name="RightCast" type="RayCast2D" parent="."]

transform/pos = Vector2( 10, 38 )
enabled = true
cast_to = Vector2( 200, 0 )
layer_mask = 1
type_mask = 15

[node name="RightCast1" type="RayCast2D" parent="."]

transform/pos = Vector2( 10, -15 )
enabled = true
cast_to = Vector2( 200, 0 )
layer_mask = 1
type_mask = 15

[node name="LeftCastUpper" type="RayCast2D" parent="."]

transform/pos = Vector2( -16, -12 )
enabled = true
cast_to = Vector2( -70, 0 )
layer_mask = 1
type_mask = 15

[node name="RightCastUpper" type="RayCast2D" parent="."]

transform/pos = Vector2( 20, -12 )
enabled = true
cast_to = Vector2( 70, 0 )
layer_mask = 1
type_mask = 15

[node name="Heart" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -2, -19 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Heart"]

transform/pos = Vector2( -2, -19 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Target" type="Position2D" parent="."]

transform/pos = Vector2( -40, 21 )

[node name="SpellTarget" type="Position2D" parent="."]

transform/pos = Vector2( -40, 0 )

[node name="AttackTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


